Fix channel creation modal button overlap bug

--- a/app/assets/stylesheets/channel/create_channel.scss
+++ b/app/assets/stylesheets/channel/create_channel.scss
@@ -1,6 +1,6 @@
 .channelNameInputField {
-    margin: 10px 30px;
-    width: 70%;
+    margin: 10px 30px 50px 30px;
+    width: 400px;
 }
 
 .createChannelButton {
